# mneme

./: .gitignore  CLAUDE.md  PLAN.md  README.md  hypostasis.example.yaml  mneme.yaml  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
hypostasis/: __init__.py  cli.py  config.py  install.py  models.py  probe.py  render.py  status.py
hypostasis/templates/: campaigngenerator.wiring.yaml.j2
issues/: 0001-config-ownership-boundary.md  0002-cg-remaining-external-constants.md  0003-query-rpg-lib-direct-access.md  0004-gm-assistant-campaigns-path.md  0005-hypostasis-substrate-layer.md  0006-campaign-creation-must-bootstrap-mempalace.md  0007-proposal-aware-status.md  0008-constitution-observability-gap.md  0009-hypostasis-rpg-lib-lifecycle.md  0010-hypostasis-mempalace-store-provision-backup.md  README.md
mneme/: __init__.py  cli.py  config.py  install.py  lifecycle.py  models.py  render.py  status.py
mneme/mcp/: __init__.py  server.py
mneme/mempalace/: __init__.py  authority.py  backup.py  bootstrap.py  bringup.py  cli.py  conform.py  discover.py  health.py  migrate.py  models.py  ownership.py  proposals.py  provision.py  publish.py  recipe.py  refresh.py  render.py  runner.py  target.py  workcopy.py
mneme/recipes/: mempalace.recipe.v1.yaml  mempalace.recipe.v2.yaml
mneme/templates/: campaigngenerator.config.yaml.j2  campaigngenerator.wiring.yaml.j2  dgxlib.models.yaml.j2  mempalace.yaml.j2  rpg_lib.config.yaml.j2  turbovecdb.config.yaml.j2
specs/001-reproducible-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-manage-campaign-mempalaces/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-new-campaign-mempalace/: data-model.md  plan.md  quickstart.md  research-current-state.md  research.md  spec.md  tasks.md
specs/005-multi-root-campaigns/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/fixtures/: __init__.py  stub_mempalace.py
(+64 files in other folders)
