[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypostasis"
version = "0.1.0"
description = "hypostasis (configure the environment) + mneme (per-campaign runtime) for the campaign/DGX system"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "PyYAML>=6",
  "jinja2>=3.1",
  "httpx>=0.27",
  "packaging>=24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
mcp = ["mcp>=1.2"]                   # the advisory `mneme mp mcp` server (optional)

[project.scripts]
hypostasis = "hypostasis.cli:app"   # configure the environment (run once)
mneme = "mneme.cli:app"             # spin up per campaign (run each time)

[tool.setuptools]
packages = ["hypostasis", "mneme", "mneme.mempalace", "mneme.mcp"]

[tool.setuptools.package-data]
hypostasis = ["templates/*.j2"]
mneme = ["recipes/*.yaml", "recipes/instructions/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --import-mode=importlib"
markers = [
  "slow: tests that create a real venv / install (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
